# improved_stitching_algorithm

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/Stitching/: Stitcher.h
src/: KDTree.h  LMOptimizer.h  MyLMOptimizer.h  Stitcher.cpp  StitcherHelper.cpp  StitcherHelper.h
